# TestTask_LeaderboardDjango

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
src/: __init__.py
src/common/: env_settings.py
src/config/: settings.py  urls.py
src/leaderboard/: urls.py
src/leaderboard/migrations/: 0001_initial.py
src/leaderboard/models/: __init__.py  competition_result.py
src/leaderboard/repositories/: __init__.py  competition.py
src/leaderboard/serializers/: __init__.py  competition_request.py  competition_result.py
src/leaderboard/services/: __init__.py  competition.py
src/leaderboard/views/: __init__.py  competition_result.py
